Make search results appear in a fixed window; Make search text clickable; Improve search layout on mobile.

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -263,9 +263,8 @@ div.body p, div.body dd, div.body li, div.body blockquote {
 .search-results {
     background-color: #f8f8f8;
     box-shadow: 0 6px 10px rgb(0 0 0 / 0.2);
-    position: absolute;
+    position: fixed;
     z-index: 1500;
-    margin-top: 4px;
     padding-right: 6px;
     padding-left: 6px;
     border-radius: 12px;
